# face-recognition-api

./: .dockerignore  .env.docker.example  .env.example  .gitignore  Dockerfile  FACE_RECOGNITION_API.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 5708e329289b_add_face_biometric_fields.py  b7463634f7cc_initial_tables.py
app/: main.py
app/api/v1/: api.py
app/core/: config.py
app/db/: database.py
app/modules/auth/: router.py  schemas.py  service.py
app/modules/user/: models.py  router.py  schemas.py  service.py
app/services/: auth.py  encryption_service.py  face_recognition.py  face_recognition_service.py
tests/: conftest.py  test_auth.py  test_users.py
