[tool.poetry]
name = "face-recognition"
version = "0.1.0"
description = "API for face recognition with PostgreSQL backend"
authors = ["Kauan Rodrigues <kauanrl09@gmail.com>"]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = ">=0.104.1"
uvicorn = {extras = ["standard"], version = ">=0.24.0"}
sqlalchemy = {extras = ["asyncio"], version = ">=2.0.23"}
asyncpg = ">=0.29.0"
pydantic = ">=2.5.0"
pydantic-settings = ">=2.0.0"
email-validator = ">=2.0.0"
python-multipart = ">=0.0.6"
alembic = ">=1.13.0"
python-jose = {extras = ["cryptography"], version = ">=3.3.0"}
passlib = {extras = ["bcrypt"], version = ">=1.7.4"}
bcrypt = ">=4.0.0,<5.0.0"
python-dotenv = ">=1.0.0"
pytest = ">=7.4.0"
pytest-asyncio = ">=0.21.0"
httpx = ">=0.25.0"
insightface = ">=0.7.3,<0.8.0"
numpy = ">=1.21,<2.0"
opencv-python = "<4.10"
pillow = ">=11.3.0,<12.0.0"
mediapipe = ">=0.10.21,<0.11.0"
scipy = ">=1.16.2,<2.0.0"
cryptography = ">=46.0.1,<47.0.0"

[tool.poetry.group.dev.dependencies]
ruff = ">=0.8.0"
taskipy = ">=1.14.0"
pytest-cov = ">=4.1.0"
pytest-watch = ">=4.2.0"

[tool.poetry.group.gpu.dependencies]
onnxruntime-gpu = ">=1.23.0,<2.0.0"

[tool.poetry.group.cpu.dependencies]
onnxruntime = ">=1.23.0,<2.0.0"

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "PT"]
ignore = ["B008", "B904"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.taskipy.tasks]
lint = "ruff check ."
format = "ruff format ."
check = "ruff check . && ruff format --check ."
run = "uvicorn app.main:app --reload --host 0.0.0.0 --port 8000"
migrate = "alembic upgrade head"
makemigrations = "alembic revision --autogenerate -m"
test = "pytest -v"
test-cov = "pytest --cov=app --cov-report=html --cov-report=term"
test-watch = "ptw -- -v"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
